@@ -1,3 +1,9 @@
+2010-02-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
+
+	* Add FiltersToolbox/scinrrd_ndgrid.m:
+
+	- Generation of arrays for 3D SCI NRRD image volumes.
+
 2010-02-05  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
 	* Add FiltersToolbox/scirunnrrd_optimal_intersecting_plane.m:
